2014-01-29  6.8.8-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.8-3, SVN revision 14676.

2014-01-29  6.8.8-4 Cristy  <quetzlzacatenango@image...>
  * remove comma at end of enumerator list, magick/compare.h.

2014-01-28  6.8.8-4 Dirk Lemstra <dirk@snakeware...>
  * Added transpose and transverse to Magick++. (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=24884).

2014-01-25  6.8.8-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.8-3, SVN revision 14651.

2014-01-18  6.8.8-3 Dirk Lemstra <dirk@snakeware...>
  * Added ResourceLimits class and text direction/gravity to Magick++.
  * Added support for defining dimensions with icon:auto-resize (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=24796).

2014-01-16  6.8.8-3 Glenn Randers-Pehrson <glennrp@image...>
  * Added "-define png:swap-bytes" option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=24818).
  * Added image->duration to image.h, calculate duration in gif.c, and
    report duration in identify.c (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=23276).

2014-01-15  6.8.8-3 Cristy  <quetzlzacatenango@image...>
  * The -type truecolor option for a grayscale image returns RGB JPEG (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24814).
  * Support JSON coder (.e.g. convert image.jpg image.json).

2014-01-10  6.8.8-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.8-2, SVN revision 14347.

2014-01-09  6.8.8-2 Dirk Lemstra <dirk@snakeware...>
  * Added option 'icon:auto-resize' to automatically store multiple sizes
    in an ico image (requires 256x256 input image).
  * Added text kerning/spacing to Magick++. (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=23&t=24716).

2013-12-30  6.8.8-2 Cristy  <quetzlzacatenango@image...>
  * The -evaluate-sequence sum returns a proper alpha channel now (reference