@@ -1,8 +1,12 @@
+2014-01-30  6.8.8-5 Glenn Randers-Pehrson <glennrp@image...>
+  * Fixed new "-define png:swap-bytes" option (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=24818).
+
 2014-01-29  6.8.8-4 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.8-3, SVN revision 14676.
 
 2014-01-29  6.8.8-4 Cristy  <quetzlzacatenango@image...>
-  * remove comma at end of enumerator list, magick/compare.h.
+  * Remove comma at end of enumerator list, magick/compare.h.
 
 2014-01-28  6.8.8-4 Dirk Lemstra <dirk@snakeware...>
   * Added transpose and transverse to Magick++. (reference
